--- a/.gitmodules
+++ b/.gitmodules
@@ -16,4 +16,5 @@
 	url = https://github.com/rust-lang/rust-installer.git
 [submodule "src/liblibc"]
 	path = src/liblibc
-	url = https://github.com/rust-lang-nursery/libc.git
+	url = https://github.com/japaric/libc.git
+	branch = mips-musl
