--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Scott Olson <scott@solson.me>"]
 description = "An experimental interpreter for Rust MIR."
-license = "ISC"
+license = "MIT/Apache-2.0"
 name = "miri"
 repository = "https://github.com/solson/miri"
 version = "0.1.0"
