add dependencies and run cargo update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ test = false
 
 [dependencies]
 byteorder = "0.4.2"
+env_logger = "0.3.3"
+log = "0.3.6"
+log_settings = "0.1.1"
 
 [dev-dependencies]
 compiletest_rs = "0.1.1"
