--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ before_script:
   pip install 'travis-cargo<0.2' --user &&
   export PATH=$HOME/.local/bin:$PATH
 script:
-- set -e
-- travis-cargo build
-- env RUST_SYSROOT=$HOME/rust travis-cargo test
+- |
+  travis-cargo build &&
+  env RUST_SYSROOT=$HOME/rust travis-cargo test
 notifications:
   email:
     on_success: never
