miri needs to be *built* with RUST_SYSROOT, not *run*

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_script:
   export PATH=$HOME/.local/bin:$PATH
 script:
 - |
-  travis-cargo build &&
+  env RUST_SYSROOT=$HOME/rust travis-cargo build &&
   env RUST_SYSROOT=$HOME/rust travis-cargo test
 notifications:
   email:
