--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/llvm"]
 	path = src/llvm
-	url = https://github.com/rust-lang/llvm.git
+	url = https://github.com/bitshifter/llvm.git
 	branch = master
 [submodule "src/compiler-rt"]
 	path = src/compiler-rt
